tests/codegen/fail/interface/struct/attr_field_double_underscored.rs
use juniper::graphql_interface;

#[graphql_interface]
struct Character {
    __id: String,
}

fn main() {}
